# mlops-pipeline-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.gpu  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  release-deploy.yml
configs/: config.yaml  data.yaml  eval.yaml  train.yaml
flows/: train_register_deploy.py
infra/terraform/: README.md  main.tf  providers.tf  terraform.tfvars.example  variables.tf
src/data/: make_dataset.py
src/evaluation/: evaluate.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/serving/: Dockerfile  app.py
tests/: test_pipeline_smoke.py
